# Backend-Test-

./: .env.sample  README.md  Solution.md  deploy.dockerfile  deployment.yaml  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  secret.yaml  service.yaml
app/core/: models.py
constants/: constant.py
e_comm/: settings.py  urls.py
orders/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
products/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
users/: admin.py  models.py  serializers.py  test_views.py  urls.py  views.py
utils/: exceptions.py  test_utils.py  utils.py
